force-app/main/default/objects/Change_Log__c/Change_Log__c.object-meta.xml
<CustomObject>
    <description
  >Immutable event record capturing what changed, when, and why. Bridges a Work Item to the Technical Documentation it produced or updated.</description>
    <label>Change Log</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Change Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>