force-app/main/default/objects/Change_Log__c/fields/Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Date__c</fullName>
    <description>When the change was made. Defaults to the current date and time but can be backdated if the change was made outside Salesforce (e.g. a manual config change applied earlier).</description>
    <inlineHelpText>The date and time the change was applied. Adjust if the change occurred outside of Salesforce.</inlineHelpText>
    <label>Change Date</label>
    <type>DateTime</type>
</CustomField>