force-app/main/default/objects/Change_Log__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description
  >The Salesforce org environment where this change was applied. Helps distinguish sandbox validation from production deployment.</description>
    <inlineHelpText
  >Where was this change deployed? Select the environment this change log entry describes.</inlineHelpText>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scratch Org</fullName>
                <default>true</default>
                <label>Scratch Org</label>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>