force-app/main/default/objects/Change_Log__c/fields/Staged_Technical_Body__c.field-meta.xml
<CustomField>
    <fullName>Staged_Technical_Body__c</fullName>
    <description>Complete new Technical documentation body written by the Docs Agent. Published to Documentation__c.Body__c by the Release Agent at release time.</description>
    <label>Staged Technical Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>