force-app/main/default/objects/Change_Log__c/fields/Staged_User_Body__c.field-meta.xml
<CustomField>
    <fullName>Staged_User_Body__c</fullName>
    <description>Complete new User documentation body written by the Docs Agent. Published to the linked User Documentation__c.Body__c by the Release Agent at release time.</description>
    <label>Staged User Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>