force-app/main/default/objects/Change_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The review state of this change log entry. Draft = being written; Reviewed = confirmed accurate by a second person; Published = final and shared.</description>
    <inlineHelpText>Move to Reviewed once someone has confirmed the change log accurately reflects what was deployed.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>