force-app/main/default/objects/Change_Log__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description
  >Full rich text description of the change: what was done, why, what was affected, and any caveats or follow-up items.</description>
    <inlineHelpText
  >Describe the change in detail. Include what was added or modified, the reason, and any known side effects or dependencies.</inlineHelpText>
    <label>Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>