force-app/main/default/objects/Change_Log__c/fields/Technical_Doc__c.field-meta.xml
<CustomField>
    <fullName>Technical_Doc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Technical Documentation record that was created or updated as a result of this change. Forms the bridge between the Work Item and the living documentation.</description>
    <inlineHelpText>Link to the Technical doc that this change log entry produced or updated.</inlineHelpText>
    <label>Technical Doc</label>
    <referenceTo>Documentation__c</referenceTo>
    <relationshipLabel>Change Logs</relationshipLabel>
    <relationshipName>Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>