force-app/main/default/objects/Change_Log__c/fields/Technical_Doc_Added__c.field-meta.xml
<CustomField>
    <fullName>Technical_Doc_Added__c</fullName>
    <description>Content added to the Technical documentation body in this change. Populated explicitly by the Docs Agent.</description>
    <label>Technical Doc (Added)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>