force-app/main/default/objects/Change_Log__c/fields/Technical_Doc_Before__c.field-meta.xml
<CustomField>
    <fullName>Technical_Doc_Before__c</fullName>
    <description>Snapshot of the Technical documentation body before this change was applied. Auto-populated by trigger on Change Log creation.</description>
    <label>Technical Doc (Before)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>