force-app/main/default/objects/Change_Log__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>A short human-readable summary of what changed in this entry. Written by the author or agent that created the record.</description>
    <inlineHelpText>One line describing what changed — e.g. &quot;Added sprint velocity chart to Board component&quot;.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>