force-app/main/default/objects/Change_Log__c/fields/User_Doc_Added__c.field-meta.xml
<CustomField>
    <fullName>User_Doc_Added__c</fullName>
    <description>Content added to the User documentation body in this change. Populated explicitly by the Docs Agent.</description>
    <label>User Doc (Added)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>