force-app/main/default/objects/Change_Log__c/fields/User_Doc_After__c.field-meta.xml
<CustomField>
    <fullName>User_Doc_After__c</fullName>
    <description>Snapshot of the User documentation body after this change was applied. Populated by an agent or user once doc edits are complete.</description>
    <label>User Doc (After)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>