force-app/main/default/objects/Change_Log__c/fields/User_Doc_Before__c.field-meta.xml
<CustomField>
    <fullName>User_Doc_Before__c</fullName>
    <description>Snapshot of the User documentation body before this change was applied. Auto-populated via the linked Technical doc's Related User Doc at Change Log creation.</description>
    <label>User Doc (Before)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>