force-app/main/default/objects/Change_Log__c/fields/User_Doc_Removed__c.field-meta.xml
<CustomField>
    <fullName>User_Doc_Removed__c</fullName>
    <description>Content removed from the User documentation body in this change. Populated explicitly by the Docs Agent.</description>
    <label>User Doc (Removed)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>