force-app/main/default/objects/Change_Log__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description
  >Optional version label for this change — e.g. "v1.2", "Sprint 4", "2026-05-21". Useful for tracking which version of the system this change applies to.</description>
    <inlineHelpText
  >Tag this change with a version or sprint label for traceability.</inlineHelpText>
    <label>Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>