force-app/main/default/objects/Change_Log__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Work Item that triggered this change. Used by agents to link the delivery record back to the work that prompted it.</description>
    <inlineHelpText>The Story, Task, or Bug that this change was made for.</inlineHelpText>
    <label>Work Item</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>Change Logs</relationshipLabel>
    <relationshipName>Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>