force-app/main/default/objects/Change_Log__c/recordTypes/Initial.recordType-meta.xml
<RecordType>
    <fullName>Initial</fullName>
    <active>true</active>
    <description>First-time creation of a documentation page. Use this record type when the Change Log entry represents the initial version of a doc, not a subsequent update.</description>
    <label>Initial</label>
</RecordType>