force-app/main/default/objects/Change_Log__c/recordTypes/Update.recordType-meta.xml
<RecordType>
    <fullName>Update</fullName>
    <active>true</active>
    <description>Subsequent change to an existing documentation page. Use this record type when the Change Log entry updates content that already exists.</description>
    <label>Update</label>
</RecordType>