force-app/main/default/objects/Change_Log__c/validationRules/Staged_Docs_Cleared_When_Published.validationRule-meta.xml
<ValidationRule>
    <fullName>Staged_Docs_Cleared_When_Published</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Published&quot;), OR(LEN(Staged_Technical_Body__c) &gt; 0, LEN(Staged_User_Body__c) &gt; 0))</errorConditionFormula>
    <errorMessage>Staged documentation fields must be blank when the Change Log is Published.</errorMessage>
</ValidationRule>