force-app/main/default/objects/Change_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Work_Item__c</columns>
    <columns>Technical_Doc__c</columns>
    <columns>Version__c</columns>
    <columns>Environment__c</columns>
    <columns>Change_Date__c</columns>
    <columns>Changed_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>